# predicting_tempnorm

./: .gitignore  README.md  pyproject.toml  requirements.txt  sanity_check_colab.ipynb
data/: contexts.txt
predicting_tempnorm/: __init__.py  config.py  run_experiment.py  train_tempnorm_predictor.py
sanity_check/: README.md  __init__.py  analyze_clustered_tempnorm.py  build_reference_space.py  generate_clustered_tempnorm_data.py  requirements.txt
sanity_check/sanity_check/: __init__.py  analyze_clustered_tempnorm.py  build_reference_space.py  generate_clustered_tempnorm_data.py  utils.py
